fix - truncating names

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 body {
-  background: #191919;
+  background: #333333;
 }
