--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -1,19 +1,20 @@
 .userlist-main-container {
-  height: 80vh;
-  width: 25%;
+  width: 107px;
+  border-radius: 6px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: #d4d4d4;
+  background: #222222;
+  float: right;
+  margin-right: 10px;
 }
 
 .user-card {
+  color: #d4d4d4;
   width: 90%;
+  height: 40px;
   margin: 5px;
-  padding: 10px;
-  border-style: solid;
-  border-width: 1px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -22,23 +23,23 @@
 .user-card-left,
 .user-card-right {
   width: 50%;
-}
-
-.user-card-right {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+.user-card-right > small{
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .user-avatar {
-  height: 85px;
-  width: 85px;
+  height: 36px;
+  width: 36px;
   border-style: solid;
   border-color: #2aabe2;
   border-width: 3px;
   border-radius: 50%;
-  margin: 5px;
-  background: #111;
   opacity: 0.9;
 }
